# Theresa

./: .gitignore  desktop.ini
DiscordBot/: .gitignore  CMakeLists.txt  Theresa.js  YouTubeMgr.js  audio.js  audiov2.js  commands.json  eliteDangerous.js  groupe.json  help.js  lucieTest.js  main.js  package-lock.json  package.json  rp.js  tools.js
DiscordBot/Servers/737261859916349542/: ServerInfo.tsave
DiscordBot/Servers/737261859916349542/userOption/383156218862239744/: userList.tuser
DiscordBot/Servers/737261859916349542/userOption/407160503912103937/: channelVoiceList.tchn  userList.tuser  userVoiceList.tuser
DiscordBot/Servers/737261859916349542/userOption/606684737611759628/: channelVoiceList.tchn  userList.tuser  userVoiceList.tuser
DiscordBot/Servers/737261859916349542/userOption/845578034937331722/: channelVoiceList.tchn
DiscordBot/Servers/889416369567834112/: ServerInfo.tsave
DiscordBot/audio/: musicDirectory.json  musicDirectory.tlist
DiscordBot/customServices/codingFactory/: coding.js
DiscordBot/customServices/veritasKingdom/: eliteDangerous.js
DiscordBot/elite/: lastcheck.tsave
DiscordBot/include/: webSocket.hpp
DiscordBot/src/: Theresa.js  audio.js  audio.mjs  discordBotMain.js  main.cpp  main.js  main.mjs  newmain.mjs  rp.js  theresa.mjs  tools.js  tools.mjs  webSocketHandler.cpp
DiscordBot/src/js/: discord.js  main.js  websocket.js
DiscordBot/src/old/: help.js  theresa.mjs
Web/: main.html
api/: connector.js  main.js  music.js  package.json  tools.js  user.js
storage/: webDatabase.json
website/: index.html  main.js
(+8 files in other folders)
